# champ_setup_assistant

./: .travis.yml  CMakeLists.txt  README.md  package.xml
config/: setup_assistant.rviz
launch/: description.launch  setup_assistant.launch
scripts/: code_gen_widget.py  config_predict.py  file_browser_widget.py  gait_configurator_widget.py  joint_configurator.py  leg_configurator.py  leg_configurator_widget.py  link_list_widget.py  package_creator.py  rviz_widget.py  setup_assistant.py  urdf_parser.py
templates/: CMakeLists.txt  README.md  bringup.launch  firmware_utils.py  gait.yaml  gait_config.h  gazebo.launch  hardware_config.h  joints.yaml  links.yaml  move_base.launch  navigate.launch  package.xml  quadruped.urdf  quadruped_description.h  ros_control.yaml  slam.launch  spawn_robot.launch
