<package format="2">
    <name>champ_setup_assistant</name>
    <version>0.1.0</version>
    <description>Champ Robot Setup Assistant</description>

    <license>BSD</license>

    <author email="jimenojmm@gmail.com">Juan Jimeno</author>
    <maintainer email="jimenojmm@gmail.com.com">Juan Jimeno</maintainer>

    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>rviz</exec_depend>
    <exec_depend>moveit_ros_planning_interface</exec_depend>
    <exec_depend>python3-jinja2</exec_depend>
    <exec_depend>python_qt_binding</exec_depend>
    <exec_depend>urdfdom_py</exec_depend>

    <build_export_depend>class_loader</build_export_depend>
    <build_export_depend>eigen_conversions</build_export_depend>
    <build_export_depend>geometric_shapes</build_export_depend>
    <build_export_depend>moveit_ros_planning_interface</build_export_depend>
    <build_export_depend>pluginlib</build_export_depend>
    <build_export_depend>rosconsole</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>rviz</build_export_depend>
    <build_export_depend>tf</build_export_depend>
    
</package>

